# multiGPU

./: CMakeLists.txt  LICENSE  README.md  config.h.in
include/: config.h
src/: testPrint.cpp  testPrint.cu  vectorAdd.cu
utils/: CMakeLists.txt  cpuHelpFunctions.h  cpuUtils.cpp  gpuHelpFunctions.cuh  helpFunctions.h  printDeviceProps.cu
